# aliaser

./: .coverage  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
app/: logger.py  main.py  shell.py  utils.py
tests/: test_main.py  test_shell.py  test_utils.py
